# pds-progetto

./: .gitignore  CMakeLists.txt  README.md
client/: CMakeLists.txt  Client.cpp  Client.h  ConfigSetting.cpp  ConfigSetting.h  FSElement.cpp  FSElement.h  FileWatcher.cpp  FileWatcher.h  Message.cpp  Message.h  Stub_client.cpp  Stub_client.h  main.cpp  stub_main.cpp
comm/: API.cpp  API.h  Client_API.cpp  Client_API.h  Client_socket_API.cpp  Client_socket_API.h  Comm_error.cpp  Comm_error.h  ElementStatus.h  Logger.cpp  Logger.h  Message.cpp  Message.h  Server_API.cpp  Server_API.h  Socket_API.cpp  Socket_API.h  Utils.cpp  Utils.h
database/: remote_backup.db  remote_bakup.db
server/: CMakeLists.txt  Client_API.h  Database_API.cpp  Database_API.h  Message.cpp  Message.h  README  Server.cpp  Server.h  ServerConfigSetting.cpp  ServerConfigSetting.h  Session.cpp  Session.h  Session_manager.cpp  Session_manager.h  Socket_API.h  main.cpp  stub_main.cpp
test/paolo00/: CMakeLists.txt  main.cpp
test/serialization/: test_serialization.cpp
test/socket/: test_socket.cpp
test/static/: test_static.cpp
test/stevezbiz00/boost_fs/: CMakeLists.txt  FSElement.cpp  FSElement.h  FileWatcher.cpp  FileWatcher.h  main.cpp
test/stevezbiz00/client/: CMakeLists.txt  Client.cpp  Client.h  FSElement.h  FileWatcher.cpp  FileWatcher.h  main.cpp
test/stevezbiz00/server/: CMakeLists.txt  Message.cpp  Message.h  Server.cpp  Session.h  main.cpp
test/template/: Base.cpp  Base.h  Der.cpp  Der.h  Service.cpp  Service.h  test_template.cpp
